weather icon + condition

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
     crossorigin="anonymous" />
-       <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script
       src="https://kit.fontawesome.com/29d44c7303.js"
       crossorigin="anonymous"
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-    <div class="card">
+      <div class="card">
         <div class="card-body">
           <div class="row">
             <div class="col-8">
@@ -56,6 +56,11 @@
           <div class="row">
             <div class="col-8">
               <h3>
+                <img
+                  src="http://openweathermap.org/img/wn/04d@2x.png"
+                  id="conditions-icon"
+                />
+                <br />
                 <span id="current-temp" class="current-temp">5</span
                 ><span class="current-units">°C</span>
               </h3>
@@ -70,7 +75,7 @@
         </div>
       </div>
     </div>
-    <br>
+    <br />
     <script src="src/script.js"></script>
   </body>
 </html>
