--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
           </div>
         </div>
       </div>
+       <div class="text-center" id="open-source-link">
+      <a
+        href="https://github.com/Nessa-DC/Xingqi-weather-app"
+        target="_blank"
+        id="code-link"
+        >Open-source code</a
+      >
+      by Nessa DC 😷
+    </div>
     </div>
     <br />
     <script src="src/script.js"></script>
