celsius versus fahrenheit

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
                   id="conditions-icon"
                 />
                 <br />
-                <span id="current-temp" class="current-temp">5</span
-                ><span class="current-units">°C</span>
+                <span id="current-temp" class="current-temp">5</span>
+                <span><a href="" id="celsius" class="active">°C </a></span>
+                <span><a href="" id="fahrenheit">|°F </a></span>
               </h3>
             </div>
             <div class="col-4">
@@ -74,15 +75,15 @@
           </div>
         </div>
       </div>
-       <div class="text-center" id="open-source-link">
-      <a
-        href="https://github.com/Nessa-DC/Xingqi-weather-app"
-        target="_blank"
-        id="code-link"
-        >Open-source code</a
-      >
-      by Nessa DC 😷
-    </div>
+      <div class="text-center" id="open-source-link">
+        <a
+          href="https://github.com/Nessa-DC/Xingqi-weather-app"
+          target="_blank"
+          id="code-link"
+          >Open-source code</a
+        >
+        by Nessa DC 😷
+      </div>
     </div>
     <br />
     <script src="src/script.js"></script>
