--- a/index.html
+++ b/index.html
@@ -73,6 +73,22 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-forecast-date">Sat</div>
+                <img
+                  src="http://openweathermap.org/img/wn/04d@2x.png"
+                  alt=""
+                  width="42"
+                />
+                <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-temperature-max"> 20° </span>
+                  <span class="weather-forecast-temperature-min"> 15°</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="text-center" id="open-source-link">
