--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
               </ul>
             </div>
           </div>
+          <p>Prepare yourself for the next few days!</p>
           <div class="weather-forecast" id="forecast">
             <div class="row">
               <div class="col-2">
